<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lunch Viewer</string>
    <string name="app_summary">Created by: Ly Cilph</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_log">Log</string>
    <string name="action_refresh_log">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="previous_week_label">Previous</string>
    <string name="current_week_label">Current</string>
    <string name="next_week_label">Next</string>
    <string name="header_label">Menu for Week %d</string>
    <string name="no_menus_label">No menus!</string>
    <string name="update_started_event">LunchViewer-UpdateStartedEvent</string>
    <string name="update_finished_event">LunchViewer-UpdateFinishedEvent</string>
    <string name="data_changed_event">LunchViewer-DataChangedEvent</string>
    <string name="navigation_header">Sections</string>
    <string name="navigation_image_description">navigation image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_command_api">Command API</string>

    <string-array name="navigation_sections">
        <item>Home</item>
        <item>Today</item>
        <item>Next</item>
    </string-array>
    <string-array name="navigation_options">
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="command_send_notification">SendNotification</string>

</resources>
