<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_content_import_export"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_log"
        android:title="@string/action_log"
        android:orderInCategory="300"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="400"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="500"
        android:showAsAction="never"/>
</menu>
