<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.lycilph.lunchviewer.fragments.NavigationDrawerFragment">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/navigation_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            android:contentDescription="@string/navigation_image_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/navigation_drawer_header_vertical_margin"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            style="@android:style/TextAppearance.Large"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/navigation_drawer_horizontal_margin"
        android:paddingRight="@dimen/navigation_drawer_horizontal_margin"
        android:text="@string/navigation_header"
        android:gravity="start"
        style="@android:style/TextAppearance.Large"/>

    <ListView
        android:id="@+id/sections_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/navigation_drawer_horizontal_margin"
        android:paddingRight="@dimen/navigation_drawer_horizontal_margin"
        android:choiceMode="singleChoice"
        android:drawSelectorOnTop="false"
        android:listSelector="@android:color/transparent"
        android:divider="@null"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <ListView
        android:id="@+id/options_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/navigation_drawer_horizontal_margin"
        android:paddingRight="@dimen/navigation_drawer_horizontal_margin"
        android:background="@android:color/darker_gray"
        android:choiceMode="singleChoice"/>
</LinearLayout>